Version ClaSS-1.0.39 release (2013/01/07)
-------------------------------------------

Fixes to the new enquiries script to decode utf8 characters and to
expunge on closing connection.




Version ClaSS-1.0.39 release (2013/01/02)
-------------------------------------------

Added carer as a new telephone type.

Fix to fetchSubjectReport for compatibility with pre-html subject
comments.

New external book for a Calendar added (currently only works with a
public Google Calendar).

Changed the main book include script to use tabname and as the
optional switch for activating externalbooks.

New profile option called celldisplay (othertype field in categorydef
table) for displaying extra content in the MarkBook.

Fix to new_mark scripts when creating a mark for a previous academic
year.


Version ClaSS-1.0.38 release (2012/12/10)
-------------------------------------------

Changed name of config option from localpostcode to sitepostcode.

Added config option for external api_key.

Added additional language (2nd and 3rd) fields for students.

New option to sort labels by contact name instead of student.



Version ClaSS-1.0.37 release (2012/12/02)
-------------------------------------------

Tiny change to display_date to blank 0000-00-00 entries.

Applied fieldtype=date to leaving and entry dates in
fetchStudent_short.

Fix to the set_charge_payment to prevent losing invoice ids.

Fix to emailing comments to academic group responsibles.

Gave office to attendance and reports through student profile.

Removed the arcane externalbook references to eportfolio.

New cron script to collect lat+lng coordinates for addresses.



Version ClaSS-1.0.36 release (2012/11/27)
-------------------------------------------

New invoice export function.

Added remittance information to the student_fees page.

Fix to marking register notices seen where communities span
yeargroups.

New imap CFG details in school.php for fetching emails.

Tidied html of comment emails.
