@@ -240,9 +240,7 @@ $string['charges']='Charges';
 $string['concept']='Concept';
 $string['due']='Pending';
 $string['issue']='Issue';
-$string['paid']='Paid';
 $string['payee']='Payee';
-$string['notpaid']='Not paid';
 $string['bank']='Bank';
 $string['applied']='Applied';
 $string['account']='Account';
